src/objects/Music_ratings__c.object
<CustomObject>
    <fields>
        <fullName>Item_Rated_Id__c</fullName>
        <label>Item Rated Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Music_CommentsId__c</fullName>
        <label>Music CommentsId</label>
        <referenceTo>Music_Comments__c</referenceTo>
        <relationshipLabel>Music Rating</relationshipLabel>
        <relationshipName>Music_Rating</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Rate Id</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Music Ratings</label>
    <nameField>
        <label>Music_ratings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Music Rating</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>